# ardan_rust

./: Cargo.toml
asyncawait/: Cargo.toml
asyncawait/src/: main.rs
authentication/: Cargo.toml
authentication/src/: lib.rs
axum-web/: Cargo.toml  hello.html
axum-web/src/: main.rs
channels/src/: main.rs
collector/: Cargo.toml  uuid
collector/src/: data_collector.rs  main.rs  sender.rs
collector_server/: Cargo.toml  collection.db  collection.db-shm  collection.db-wal
collector_server/src/: api.rs  collector.html  collector.rs  main.rs
databases/: Cargo.toml  hello_db.db  hello_db.db-shm  hello_db.db-wal
databases/migrations/: 20250424044619_initial.sql  20250424055814_more_messages.sql
databases/src/: main.rs
deadlocks/src/: main.rs
divide_work/src/: main.rs
error_handling/: Cargo.toml  kong.rs
error_handling/api/: Cargo.toml  README.md
error_handling/api/.openapi-generator/: FILES
error_handling/api/docs/: BadRequestError.md  BaseError.md  ConflictError.md  ControlPlane.md  ControlPlaneConfig.md  ControlPlaneFilterParameters.md  ControlPlaneFilterParametersClusterType.md  ControlPlaneFilterParametersId.md  (+36 more)
error_handling/src/: kong.yaml  main.rs  wasm.yaml
fileio/: Cargo.toml
fileio/src/: main.rs
footgun/src/: main.rs
login/: Cargo.toml
login/src/: main.rs
login_manager/: Cargo.toml  users.json
login_manager/src/: main.rs
mutexes/src/: main.rs
oas-test/: Cargo.toml
oas-test/src/: main.rs  openapi.json
restclient/: Cargo.toml
restclient/src/: main.rs
rwlocks/src/: main.rs
scoped_threads/src/: main.rs
shared_data/: Cargo.toml
shared_data/src/: lib.rs
tcpserver/: Cargo.toml
tcpserver/src/: main.rs
thread_builder/src/: main.rs
threads/src/: main.rs
thumbnail-server/: Cargo.toml  images.db
thumbnail-server/src/: index.html  main.rs
tokio-blocking/: Cargo.toml
tokio-blocking/src/: main.rs
tokio-intro/: Cargo.toml
tokio-intro/src/: main.rs
tokio-testing/: Cargo.toml
tokio-testing/src/: lib.rs
tokio-tracing/: Cargo.toml
tokio-tracing/src/: main.rs
tokiochannels/: Cargo.toml
tokiochannels/src/: main.rs
variables/src/: main.rs
workers/src/: main.rs
workqueue/: Cargo.toml
workqueue/src/: main.rs
(+47 files in other folders)
