[workspace]
resolver = "2"
members = ["authentication", "login", "login_manager", "variables", "threads", "divide_work", "thread_builder", "scoped_threads", "footgun", "mutexes", "rwlocks", "deadlocks", "channels", "workers", "workqueue", "asyncawait", "tokio-intro", "tokio-blocking", "tokio-testing", "error_handling", "fileio", "restclient", "tcpserver", "tokiochannels", "tokio-tracing", "oas-test", "databases", "axum-web", "thumbnail-server", "shared_data", "collector", "collector_server"]
