[package]
name = "collector_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
shared_data = { path = "../shared_data" }
anyhow = "1.0.98"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = "1.16.0"
dotenv = "0.15.0"
axum = "0.8.3"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
