[package]
name = "oas-test"
version = "0.1.0"
edition = "2024"

[dependencies]
openapiv3 = "2.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.12", features = ["json", "stream"] }