[package]
name = "thumbnail-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["multipart"] }
dotenv = "0.15.0"
futures = "0.3.31"
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
